--- a/ProjectTasksFrontend/src/app/app.component.html
+++ b/ProjectTasksFrontend/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div class="content">
-</div>
+<div class="page-content">
 
-<router-outlet></router-outlet>
+    <app-project></app-project>
+
+</div>
