--- a/ProjectTasksFrontend/src/app/app.component.scss
+++ b/ProjectTasksFrontend/src/app/app.component.scss
@@ -1,8 +1,3 @@
-.content {
-    display: flex;
-    margin: 82px auto 32px;
-    padding: 0 16px;
-    flex-direction: column;
-    align-items: center;
-    width: 70vw;
-}
+@import "./common-components/common-styles.scss";
+
+@include shared-styles;
